# csv_report

./: .bandit  .black  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .safety  CHANGELOG.md  DEVOPS_SETUP.md  Dockerfile  README.md  bandit-report-fixed.json  bandit-report.json  fly.toml  init_db.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.db  run_csv_report.sh  send_report.sh  setup.py  test_cli.py  test_email.py  test_html_email.py  test_html_template.py  test_logging.py  test_send_html_email.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fly-deploy.yml  publish-testpypi.yml  test.yml
data/: dummy.json  sp500.csv
reports/: sp500_analysis.markdown
scr/: main.py
src/csv_report/: __init__.py  __main__.py  database.py  db_init.py  load.py  logging_config.py  main.py  models.py
src/csv_report/report/: compute.py  email.py  email_template.html  generate.py  render.py  report_template.html  template.j2  template.markdown.j2
src/kpi_service/: __init__.py  app.py  kpi.py  main.py
src/kpi_service/tests/: test_api.py
src/web_app/: manage.py
src/web_app/csv_upload/: apps.py
src/web_app/upload/: apps.py  models.py  urls.py  views.py
src/web_app/upload/migrations/: 0001_initial.py
src/web_app/upload/templates/upload/: reports.html  upload.html
src/web_app/web_app/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  smoke_test.py  test_cli.py  test_compute.py  test_email.py  test_generate.py  test_load.py  test_main.py  test_models.py  test_template_rendering.py
