[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_report"
version = "0.1.0"
description = "Tiny CLI that loads a CSV, analyses it and optionally e-mails a report."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1",
    "jinja2>=3.0.0",
    "yagmail>=0.15.0",
    "python-dotenv>=1.0.0",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlmodel>=0.0.14",
    "typer[all]>=0.9.0,<0.10.0",
    "click<9.0.0"
]

[tool.setuptools]          # â¶ sagt: alle Pakete liegen unter src/
package-dir = {"" = "src"}

# Automatisches Auffinden der Packages
[tool.setuptools.packages.find]
where = ["src"]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.11.13"
bandit = "^1.7.5"
safety = "^2.3.5"
pre-commit = "^3.6.0"
typer = {extras = ["all"], version = "^0.9.0,<0.10.0"}

[tool.poetry.scripts]
csv-report = "csv_report.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=csv_report --cov-report=term-missing"